<resources>
    <string name="app_name">BanHangKhoaPham</string>
    <string name="failed">TODO</string>
    <string name="wearing_a_dress">Wearing a Dress</string>
    <string name="hint_search">What do you want to buy?</string>
    <string name="spring_collection">SPRING COLLECTION</string>
    <string name="list_of_category">LIST OF CATEGORY</string>
    <string name="top_product">TOP PRODUCT</string>
    <string name="image_category">Image Category</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_info">Change Info</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up_now">SIGN UP NOW</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="sign_in_now">SIGN IN NOW</string>
    <string name="order_history">Order History</string>
    <string name="order_id">Order id:</string>
    <string name="order_time">Order time:</string>
    <string name="order_status">Status</string>
    <string name="order_total">Total</string>
    <string name="change_your_infomation">CHANGE YOUR INFOMATION</string>
</resources>
