<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/failed"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonOrderHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signin_button"
            android:padding="16dp"
            android:text="@string/order_history"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonChangeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/signin_button"
            android:padding="16dp"
            android:text="@string/change_info"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signin_button"
            android:padding="16dp"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>