<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSignInActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_width"
            android:background="@null"
            android:contentDescription="@string/failed"
            android:scaleType="fitXY"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wearing_a_dress"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_width"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/failed"
            android:src="@drawable/ic_logo" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/signin_button"
            android:gravity="center"
            android:padding="@dimen/buttonPadding"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/signin_button"
            android:gravity="center"
            android:padding="@dimen/buttonPadding"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>