<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d9d6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/spring_collection"
                android:textColor="@color/title_color"
                android:textSize="@dimen/title_size" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/banner_button"
                android:contentDescription="@string/failed"
                android:scaleType="fitXY"
                android:src="@drawable/banner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#FFF"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/list_of_category"
                android:textColor="@color/title_color"
                android:textSize="@dimen/title_size" />

            <android.support.v4.view.ViewPager
                android:id="@+id/pagerCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
