<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context="com.example.gietb.banhangkhoapham.ChangeInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_info"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <ImageButton
            android:id="@+id/backToMainButton"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_width"
            android:background="@drawable/menu_button"
            android:contentDescription="@string/failed"
            android:scaleType="fitXY"
            android:src="@drawable/back_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="Nguyen Van Pho" />

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="192 Le Thi Rieng" />

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="098 672 9636" />

        <Button
            android:id="@+id/changeInfoButton"
            android:text="@string/change_your_infomation"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
