<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gietb.banhangkhoapham.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/menu_button"
                    android:contentDescription="@string/failed"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/wearing_a_dress"
                    android:textColor="#FFF"
                    android:textSize="24sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/failed"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_logo" />
            </RelativeLayout>

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#FFF"
                android:focusable="false"
                android:hint="@string/hint_search"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="#E0E0E0" />
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragment_drawer"
        android:name="drawer.NavigationDrawerFragment"
        class="drawer.NavigationDrawerFragment"
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_gravity="start" />
</android.support.v4.widget.DrawerLayout>
